# test

./: .gitmodules  build_QT_note.txt  test.txt
NVIDIA/: note.txt
QTMSER/: QTMSER.pro  QTMSER.sln  QTMSER.vcxproj  QTMSER.vcxproj.filters  draw_ellipse.cpp  draw_ellipse.h  general_proj.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  uic_wrapper.sh
QTMSER/QTMSER.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
QTMSER/mser/: mser.cpp  mser.h  mser_process.cpp  mser_process.h
QT_test/: HiGit.pro  main.cpp  note.txt  qt_test.pro  vsmkf_clean.bat  vsmkfd.bat  vsmkfd_clean.bat
QT_test/qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_test/src/: main.cpp
QT_test/vs2019/: vs2019.sln  vs2019.vcxproj  vs2019.vcxproj.filters  vsmkf.bat  vsmkf_clean.bat  vsmkf_rebuild.bat  vsmkfd.bat  vsmkfd_clean.bat
SQLite_test/: note.txt  sqlite_test.cpp  sqlite_test.h
SQLite_test/vs2019/: vs2019.cpp  vs2019.sln  vs2019.vcxproj  vs2019.vcxproj.filters
SRT_test/: ffmpeg_client.cpp  ffmpeg_client.h  ffmpeg_server.cpp  ffmpeg_server.h  srt_client.cpp  srt_client.h  srt_server.cpp  srt_server.h
SRT_test/vs2019/: vs2019.sln
STL_test/: algorithm.cpp  algorithm.h  file.h  for_each.cpp  for_each.h  macro.cpp  note.txt  smart_point.cpp  smart_point.h  test.cpp  thread.h
STL_test/src/: atomic_test.cpp  atomic_test.h  c11_timer.cpp  c11_timer.h  container.cpp  container.h  for_each.cpp  for_each.h  function.cpp  function.h  my_array.cpp  my_array.h  my_map_class.hpp  other_test.cpp  other_test.h  random.cpp  random.h  regular_express.cpp  regular_express.h
STL_test/ubuntu/: CMakeLists.txt  main.cpp
boost/: algorithm.cpp  algorithm.h  json.cpp  json.h  thread.cpp  uuid.cpp  uuid.h
boost/ubuntu/: CMakeLists.txt  main.cpp
boost/vs2013/: bosot_test.cpp  bosot_test.sln  bosot_test.vcxproj  bosot_test.vcxproj.filters  stdafx.cpp
boost_test/: note.txt  thread.h
boost_test/src/: algorithm.cpp  algorithm.h  b_process.cpp  b_process.h  container.cpp  container.h  file.cpp  file.h  hardware.cpp  hardware.h  thread.cpp  timer.cpp  timer.h
boost_test/ubuntu/: CMakeLists.txt  main.cpp
boost_test/vs2019/: vs2019.sln
c11_test/: c11_for_each.cpp  c11_for_each.h  c11_initial.cpp  c11_initial.h  c11_move.cpp  c11_move.h  c11_note.txt  c11_sample.cpp  c11_sample.h  rule_three.cpp
c11_test/c11_test.xcodeproj/: project.pbxproj
c11_test/src/: c11_LR_value.cpp  c11_LR_value.h  c11_constexpr.cpp  c11_constexpr.h  c11_enum_class.cpp  c11_enum_class.h  c11_initial.cpp  c11_lambda_op.cpp  c11_lambda_op.h  c11_other_test.cpp  c11_other_test.h  c11_range_for.cpp  c11_range_for.h  c11_sample.cpp  c11_sample.h  c11_supressing.cpp  c11_supressing.h  c11_using.cpp  c11_using.h  enum_class.cpp  enum_class.h  other_test.cpp  other_test.h  rule_five.cpp  rule_five.h  rule_three.h
c11_test/ubuntu/: CMakeLists.txt  main.cpp
c11_test/vs2019/: vs2019.sln
cmake_example/: note.txt
cmake_example/dynamic_lib/: CMakeLists.txt  def.h  dynamic_lib_1.cpp  dynamic_lib_1.h  dynamic_lib_2.c  dynamic_lib_2.h  dynamic_lib_3.c  dynamic_lib_3.h
cmake_example/dynamic_lib_cpp/: CMakeLists.txt  dynamic_lib_2.c  dynamic_lib_3.h
cmake_example/main_exec/: CMakeLists.txt  dynamic.cpp  dynamic.h  explicit_load.cpp  explicit_load.h  main.cpp  static.cpp  static.h
cmake_example/static_lib/: CMakeLists.txt  static_lib_1.cpp  static_lib_1.h  static_lib_2.c  static_lib_2.h  static_lib_3.c  static_lib_3.h
cmake_example/static_lib_cpp/: CMakeLists.txt  static_lib_1.cpp  static_lib_1.h  static_lib_2.c  static_lib_3.c
cmake_example/ubuntu/: CMakeLists.txt  main.cpp
cmake_example/ubuntu/a/: CMakeLists.txt
cmake_example/ubuntu/so/: CMakeLists.txt
curl_test/: build_note.txt  curl_test.cpp  curl_test.h
curl_test/vs2019/: vs2019.cpp  vs2019.sln  vs2019.vcxproj  vs2019.vcxproj.filters
ds_algorithm/: linklist.cpp  main.cpp
ffmpeg/: build_ffmpeg_win.txt  build_ub_nv.txt  build_ubuntu_nvidia_ffmpeg._sh  docker_build_with_nv_note.txt  ffmpeg_cmd_example_2.txt  ffprobe_cmd_example.txt  install_ffmpeg_for_docker._sh  install_ffmpeg_某個地方抓下來的編譯參考._sh  mingw.txt  msys2_note.txt
ffmpeg/note/: build_ffmpeg_win.txt  ffmpeg_cmd_example.txt  install_ffmpeg_某個網站抓下來的編譯參考.sh  note.txt
ffmpeg/official_example/: demuxing.c  demuxing_decodoe.c
ffmpeg/src/: decode.cpp  decode.h  demux.cpp  demux.h  wrap.cpp  wrap.h
ffmpeg/vs2019/: vs2019.cpp  vs2019.sln  vs2019.vcxproj  vs2019.vcxproj.filters
ffmpeg_cmd/: build_and_test_ffplay.txt  ffmpeg_cmd_example_2.txt
ffmpeg_example/: CMakeLists.txt  build_ffmpeg.sh  main.c  media.c  media.h
general_test/ubuntu/: CMakeLists.txt  main.cpp
gstreamer/: build.txt
gstreamer/cmake_example/: CMakeLists.txt  play_mp3.c
gtest/ubuntu/: CMakeLists.txt  main.cc
hardware/ubuntu/: CMakeLists.txt  main.cpp
http_server/: note.txt
leetcode/: p1.cpp  p1.h  p10.cpp  p10.h  p6.cpp  p6.h  p8.cpp  p8.h  problem.h
leetcode/ubuntu/: CMakeLists.txt  main.cpp
openCV_test/: note.txt  openCV_test.sln
openCV_test/ubuntu/: CMakeLists.txt  main.cpp  note.txt
openCV_test/yuv_test/: CMakeLists.txt  main.cpp
openSSL/: ReadMe.txt  openSSL.cpp  openSSL.sln  openSSL.vcxproj  openSSL.vcxproj.filters  stdafx.cpp
openSSL_test/: how_to_build.txt  openSSL.cpp  openSSL.h
opencc_test/: opencc_test.cpp  opencc_test.h
protobuf_test/: addressbook.pb.cc  addressbook.pb.h  note.txt  protobuf_test.cpp  protobuf_test.sln  protobuf_test.vcxproj  protobuf_test.vcxproj.filters
smart_point/: CMakeLists.txt  main.cpp  test.h
socket/: p2p_example.cpp  p2p_example.h  tcp_example.cpp  tcp_example.h  tcp_example_2.c  tcp_example_2.h  tcp_nb.cpp  tcp_nb.h  tcp_nonblock.c  tcp_nonblock.h  tool.cpp  tool.h  tool_2.c  tool_2.h  udp_example.cpp  udp_example.h  udp_example_2.c  udp_example_2.h
socket/ubuntu/: CMakeLists.txt  aaa.cpp  main.cpp  udp_server.cpp
std/: file.cpp  macro.h  thread.cpp  timer.cpp  timer.h
std/ubuntu/: CMakeLists.txt
tmp/: dictionary.cpp  dictionary.sln  dictionary.vcxproj  dictionary.vcxproj.filters
vscode_test/: CMakeLists.txt  main.cpp  note.txt  test.cpp  test.h
(+471 files in other folders)
